<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/edit_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textview_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:text="@string/sex"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radio_button_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:checked="true"
                android:onClick="changeSex"
                android:text="@string/male"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:onClick="changeSex"
                android:text="@string/female"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/bad_habits"
        android:textColor="@color/white"
        android:textSize="26sp"

        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <Switch
            android:id="@+id/switch_smoking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true"
            android:text="@string/smoking"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_alcohol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true"
            android:text="@string/alcohol"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_driver_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layoutDirection="rtl"
        android:text="@string/driver_license"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/button_send_unpressed_and_pressed"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_activity"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_activity" />


</LinearLayout>